openvidu-testapp: reconnect on server failure

--- a/openvidu-testapp/src/app/components/dialogs/session-properties-dialog/session-properties-dialog.component.css
+++ b/openvidu-testapp/src/app/components/dialogs/session-properties-dialog/session-properties-dialog.component.css
@@ -50,3 +50,7 @@ mat-radio-button:first-child {
 mat-form-field {
   margin-right: 9px;
 }
+
+#force-publishing-checkbox {
+  margin-right: 10px;
+}
