--- a/openvidu-testapp/src/app/components/dialogs/session-properties-dialog/session-properties-dialog.component.html
+++ b/openvidu-testapp/src/app/components/dialogs/session-properties-dialog/session-properties-dialog.component.html
@@ -118,9 +118,12 @@
         </mat-form-field>
       </div>
 
-      <div id="force-publishing-div">
+      <div>
         <mat-checkbox class="checkbox-form" [(ngModel)]="forcePublishing" id="force-publishing-checkbox">Force
           publishing
+        </mat-checkbox>
+        <mat-checkbox class="checkbox-form" [(ngModel)]="reconnectionOnServerFailure" id="reconnection-on-server-failure-checkbox">
+          Reconnection on server failure
         </mat-checkbox>
       </div>
 
@@ -132,5 +135,5 @@
 <mat-dialog-actions>
   <button id="cancel-btn" mat-button [mat-dialog-close]="undefined">CANCEL</button>
   <button id="save-btn" mat-button
-    [mat-dialog-close]="{sessionProperties: sessionProperties, turnConf: turnConf, manualTurnConf: manualTurnConf, customToken: customToken, forcePublishing: forcePublishing, connectionProperties: generateConnectionProperties()}">SAVE</button>
+    [mat-dialog-close]="{sessionProperties: sessionProperties, turnConf: turnConf, manualTurnConf: manualTurnConf, customToken: customToken, forcePublishing: forcePublishing, reconnectionOnServerFailure: reconnectionOnServerFailure, connectionProperties: generateConnectionProperties()}">SAVE</button>
 </mat-dialog-actions>
