openvidu-test-e2e and openvidu-testapp: fix openviduSdkFetchTest

--- a/openvidu-testapp/src/app/components/dialogs/session-api-dialog/session-api-dialog.component.css
+++ b/openvidu-testapp/src/app/components/dialogs/session-api-dialog/session-api-dialog.component.css
@@ -33,3 +33,9 @@ mat-dialog-content button {
   margin-left: 9px;
   width: 30%;
 }
+
+#clear-response-text-area-btn {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
