--- a/openvidu-server/src/dashboard/src/styles.css
+++ b/openvidu-server/src/dashboard/src/styles.css
@@ -1,4 +1,4 @@
-@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 html,
 body {
   height: 100%;
