Refactored participant preview modal
- Commented not necessary code in user-settings which forced a new publisher init if device labels were empty
- Added more conditional cases initializing the default publisher in webrtc service
- Added video background color

--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/user-settings/user-settings.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/user-settings/user-settings.component.html
@@ -58,7 +58,7 @@
 									<mat-form-field class="alternate-theme">
 										<mat-select
 											placeholder="Camera Options"
-											[ngModel]="isVideoActive && cameraSelected ? cameraSelected.device : 'None'"
+											[ngModel]="isVideoActive && !!cameraSelected ? cameraSelected.device : 'None'"
 											(selectionChange)="onCameraSelected($event)"
 										>
 											<mat-option *ngFor="let camera of cameras" [value]="camera.device">
