--- a/openvidu-components-angular/src/app/components/chat-test/chat-test.component.html
+++ b/openvidu-components-angular/src/app/components/chat-test/chat-test.component.html
@@ -33,7 +33,7 @@
 
 <div id="chat-test-container">
 	<!-- OPENVIDU CHAT -->
-	<ov-chat></ov-chat>
+	<ov-chat-panel></ov-chat-panel>
 	<span>WARNING: Like chat component need an active room, this page only allow check and test the UI</span>
 
 </div>
