--- a/openvidu-components-angular/src/app/components/stream-test/stream-test.component.html
+++ b/openvidu-components-angular/src/app/components/stream-test/stream-test.component.html
@@ -29,9 +29,9 @@
 
 </div>
 
-<div id="participant-test-container">
-	<!-- OPENVIDU PARTICIPANT -->
-	<ov-participant [participant]="participant"></ov-participant>
+<div id="stream-test-container">
+
+	<ov-stream [participant]="participant"></ov-stream>
 </div>
 
 
