--- a/openvidu-components-angular/src/app/dashboard/dashboard.component.html
+++ b/openvidu-components-angular/src/app/dashboard/dashboard.component.html
@@ -45,8 +45,8 @@
 			<span>Layout Component</span>
 		</div>
 
-		<div class="card card-small" (click)="goTo('participant')" tabindex="0">
-			<span>Participant Component</span>
+		<div class="card card-small" (click)="goTo('stream')" tabindex="0">
+			<span>Stream Component</span>
 		</div>
 
 		<div class="card card-small" (click)="goTo('chat')" tabindex="0">
