--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/session/session.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/session/session.component.html
@@ -1,6 +1,5 @@
 <div id="session-container">
 	<mat-sidenav-container class="sidenav-container">
-		<!-- OPENVIDU PANELS -->
 		<mat-sidenav
 			#sidenav
 			mode="{{ sidenavMode }}"
@@ -10,33 +9,23 @@
 			fixedTopGap="0"
 			fixedBottomGap="0"
 		>
-			<!-- Custom menu content -->
-			<ng-container *ngIf="customPanelContentTemplate; else defaultPanelContent">
-				<ng-container *ngTemplateOutlet="customPanelContentTemplate"></ng-container>
+			<!-- OPENVIDU PANEL -->
+			<ng-container *ngIf="panelTemplate">
+				<ng-container *ngTemplateOutlet="panelTemplate"></ng-container>
 			</ng-container>
-
-			<!-- Default menu content if custom menu content is not injected -->
-			<ng-template #defaultPanelContent>
-				<ov-chat-panel *ngIf="isChatPanelOpened"></ov-chat-panel>
-				<ov-participants-panel *ngIf="isParticipantsPanelOpened"></ov-participants-panel>
-			</ng-template>
 		</mat-sidenav>
 
 		<!-- OPENVIDU LAYOUT -->
 		<mat-sidenav-content class="sidenav-main">
-			<div id="layout-container">
-				<ng-content select="[layout]"></ng-content>
-			</div>
+			<ng-container *ngIf="layoutTemplate">
+				<div id="layout-container">
+					<ng-container *ngTemplateOutlet="layoutTemplate"></ng-container>
+				</div>
+			</ng-container>
 		</mat-sidenav-content>
 	</mat-sidenav-container>
 
-	<!-- Custom toolbar -->
-	<!-- <ng-container *ngIf="toolbarTemplate">
-		<div  id="toolbar-container">
-			<ng-container *ngTemplateOutlet="toolbarTemplate"></ng-container>
-		</div>
-	</ng-container> -->
-
+	<!-- OPENVIDU TOOLBAR -->
 	<ng-container *ngIf="toolbarTemplate">
 		<div id="footer-container">
 			<ng-container *ngTemplateOutlet="toolbarTemplate"></ng-container>
